mockup/css/style.css
/* ... */
.about_item {
  background: white;
  padding: 10px;
  margin: 5px;

}
.about_item_title {
  font-size: 22px;
  font-weight: 800;
  border-bottom: 1px solid rgb(220,220,220);
  padding-bottom: 5px;
}
.about_item_button {
  font-size: 22px;
  text-align: center;
  font-weight: 800;
  cursor: pointer;
  background: rgb(53,55,54);
  color: white;
  padding: 10px;
  margin: 5px;
 

}
@media screen and (min-width: 600px){
  .about_item_button {
      display: inline-block;
      width: 150px;
  }
}

/* ------------------------------------------------------------ */
/* topic 主題
/* ------------------------------------------------------------ */ 
.topic_page {
  padding: 10px;
  background: white;
  margin-bottom: 4px;
  margin-top: 5px;
}
.topic_item {
  cursor: pointer;
}
/* ------------------------------------------------------------ */
/* issue 話題
/* ------------------------------------------------------------ */ 
.issue_item {
  margin-bottom: 4px;
  background: white;
  padding: 5px 10px; 
  position: relative;

}
.issue_item_title {
  padding-right: 30px;
}
.issue_item_discuss {
  position: absolute;
  right: 15px;
  top: 15px;
  cursor: pointer;
  font-size: 24px;
}
.issue_item_discuss_count {
  
  position: absolute;
  bottom: -8px;
  left: 5px;
  color: rgb(100,100,100);
  font-weight: 700;
  font-size: 12px;
  font-family: Helvetica,Arial,sans-serif;

}
/* ------------------------------------------------------------ */
/* post 討論串
/* ------------------------------------------------------------ */ 
.order_control {
  position: absolute;
  top: 13px;
  right: 50px;
  z-index: 200;
  text-align: center;
  display: inline-block;
  font-size: 12px;
}
.focusDiscussion_title {
  font-weight: 700;
  font-size: 20px;
  font-size: 16px;
  margin: 10px 0px;
}
.post_item {
  background: white;
  margin: 1px;
  padding: 8px;
  position: relative;
  padding-bottom: 25px;

}
.post_item_img {
  width: 50px;
  float: left;
}
.post_item_info {
  overflow: hidden;  
  _overflow: visible;  
  zoom: 1; 
  padding: 0px 0px 0px 8px;
}
.post_item_author, .post_item_recommend, .post_item_date {
  color: rgb(200,200,200);
  font-weight: 700;
  font-size: 12px;
  font-family: Helvetica,Arial,sans-serif;
}
.post_item_recommend {
  position: absolute;
  right: 40px;
  top: 9px;

}
.post_item_date {
  position: absolute;
  right: 8px;
  top: 8px;
}
.post_item_text {
  white-space: pre-wrap;
  font-size: 14px;
  line-height: 18px;
  margin: 6px 0px;
}
.post_reply_item {
  position: fixed;
  bottom: -50vh;
  left: 0px;
  height: 50vh;
  width: 100%;
  background: rgb(220,220,220);
  padding: 5px 10px 40px 10px;
  box-sizing: border-box;

  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  transition-duration: .5s;


}
.post_reply_item.show {
  bottom: 0px;

  -webkit-transition: bottom .5s ease-in-out;
  transition: bottom .5s ease-in-out;

}
.post_reply_item_title {
  margin: 8px 0px;
  font-size: 14px;
  margin-right: 40px;
  position: relative;

}
.post_reply_item_minimize {
  position: absolute;
  right: 8px;
  top: 8px;
  cursor: pointer;
  width: 40px;
  text-align: center;
}
.post_reply_item textarea {
  width: 100%;
  height: 80%;
  resize: none;

}
.post_reply_item_control {
  margin: 5px 0px;
}

/* question bottom "more" function */
.more_botton_wrapper {
  text-align: center;
  margin: 20px auto;
}
.more_botton_wrapper a.button {
  width: 100px;
}
a.more {
  color: #424242;
  background: white;
}

/* ------------------------------------------------------------ */
/* page navigation
/* ------------------------------------------------------------ */ 
.navigation {
  width: 48%;
  text-align: center;
  height: 50px;
  padding: 10px;
  font-size: 40px;
  color: rgb(200,200,200);
  cursor: pointer;
  margin-bottom: 100px;

  transition-property: all;
  transition-duration: .5s;
  transition-timing-function: cubic-bezier(0, 1, 0.5, 1);

}
.navigation:hover {
  color: rgb(53,55,54);

  transition-property: all;
  transition-duration: .5s;
  transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
}
.navigation--pre {
  left: 0;
  float: left;
}
.navigation--next {
  right: 0;
  float: right;
}

